--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: "3"
 
 services:
   jaeger:
@@ -16,7 +16,7 @@ services:
     environment:
       - SERVER_PORT=80
     ports:
-      - '8001:80'
+      - "8001:80"
     networks:
       - jaeger-playground
   service-b:
@@ -26,7 +26,7 @@ services:
     environment:
       - SERVER_PORT=80
     ports:
-      - '8002:80'
+      - "8002:80"
     networks:
       - jaeger-playground
 networks:
