--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     image: jaegertracing/all-in-one:latest
     ports:
       - "6831:6831/udp"
+      - "6832:6832/udp"
       - "16686:16686"
     networks:
       - jaeger-playground
