--- a/packages/service-b/package.json
+++ b/packages/service-b/package.json
@@ -10,6 +10,8 @@
   "author": "Lucas Machado",
   "license": "MIT",
   "dependencies": {
-    "fastify": "^3.15.1"
+    "fastify": "^3.15.1",
+    "jaeger-client": "^3.18.1",
+    "opentracing": "^0.14.5"
   }
 }
