--- a/packages/service-a/package.json
+++ b/packages/service-a/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "fastify": "^3.15.1",
     "jaeger-client": "^3.18.1",
     "opentracing": "^0.14.5"
