--- a/packages/service-b/package.json
+++ b/packages/service-b/package.json
@@ -10,6 +10,7 @@
   "author": "Lucas Machado",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "fastify": "^3.15.1",
     "jaeger-client": "^3.18.1",
     "opentracing": "^0.14.5"
